unpackaged/main/default/objects/project_cloud__KPI_Schedule__c/project_cloud__KPI_Schedule__c.object-meta.xml
<CustomObject>
    <description>Object for capturing KPI information for a given time period.</description>
    <label>KPI Schedule</label>
    <nameField>
        <displayFormat>KS-{00000000}</displayFormat>
        <label>KPI Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>