unpackaged/main/default/objects/project_cloud__KPI_Schedule__c/fields/project_cloud__KPI__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__KPI__c</fullName>
    <inlineHelpText>The parent KPI</inlineHelpText>
    <label>KPI</label>
    <referenceTo>project_cloud__KPI__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>