unpackaged/main/default/objects/project_cloud__KPI_Schedule__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <inlineHelpText>The type of KPI (Planned, Actual, Forecast)</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>