unpackaged/main/default/objects/project_cloud__KPI_Schedule__c/fields/project_cloud__Value__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>